--- a/APIGateway/configuration/configuration.json
+++ b/APIGateway/configuration/configuration.json
@@ -1,38 +1,12 @@
 {
   "ReRoutes": [
     {
-      "DownstreamPathTemplate": "/api/user",
-      "DownstreamScheme": "http",
-      "DownstreamHostAndPorts": [
-        {
-          "Host": "localhost",
-          "Port": 9003
-        }
-      ],
-      "UpstreamPathTemplate": "/api/user",
-      "UpstreamHttpMethod": [ "Get" ]
-
-    },
-    {
-      "DownstreamPathTemplate": "/api/user/getbyid/{id}",
-      "DownstreamScheme": "http",
-      "DownstreamHostAndPorts": [
-        {
-          "Host": "localhost",
-          "Port": 9004
-        }
-      ],
-      "UpstreamPathTemplate": "/api/user/getbyid/{id}",
-      "UpstreamHttpMethod": [ "Get" ],
-      "Key":  "user-profile"
-    },
-    {
       "DownstreamPathTemplate": "/api/customer",
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
-          "Host": "localhost",
-          "Port": 9001
+          "Host": "192.168.99.101",
+          "Port": 5201
         }
       ],
       "UpstreamPathTemplate": "/api/customer",
@@ -44,8 +18,8 @@
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
-          "Host": "localhost",
-          "Port": 9001
+          "Host": "192.168.99.101",
+          "Port": 5201
         }
       ],
       "UpstreamPathTemplate": "/api/customer/{id}",
@@ -56,8 +30,8 @@
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
-          "Host": "localhost",
-          "Port": 9002
+          "Host": "192.168.99.101",
+          "Port": 5202
         }
       ],
       "UpstreamPathTemplate": "/api/products",
