--- a/CustomerAPIServices/CustomerAPIServices.csproj
+++ b/CustomerAPIServices/CustomerAPIServices.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <UserSecretsId>d19b401a-99c7-4b0f-bc9a-0ff4077c64d8</UserSecretsId>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
