--- a/IdentityAPIServices/Dockerfile
+++ b/IdentityAPIServices/Dockerfile
@@ -1,20 +1,21 @@
-FROM microsoft/dotnet:2.1-aspnetcore-runtime AS base
-WORKDIR /app
-EXPOSE 80
-EXPOSE 443
-
-FROM microsoft/dotnet:2.1-sdk AS build
-WORKDIR /src
-COPY ["IdentityAPIServices/IdentityAPIServices.csproj", "IdentityAPIServices/"]
-RUN dotnet restore "IdentityAPIServices/IdentityAPIServices.csproj"
-COPY . .
-WORKDIR "/src/IdentityAPIServices"
-RUN dotnet build "IdentityAPIServices.csproj" -c Release -o /app
-
-FROM build AS publish
-RUN dotnet publish "IdentityAPIServices.csproj" -c Release -o /app
-
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app .
-ENTRYPOINT ["dotnet", "IdentityAPIServices.dll"]
+ENTRYPOINT ["dotnet", "CustomerAPIServices.dll"]
+
+FROM microsoft/dotnet:sdk AS build-env
+WORKDIR /app
+
+# Copy csproj and restore as distinct layers
+COPY *.csproj ./
+RUN dotnet restore
+
+# Copy everything else and build
+COPY . ./
+RUN dotnet publish -c Release -o out
+
+# Build runtime image
+FROM microsoft/dotnet:aspnetcore-runtime
+WORKDIR /app
+COPY --from=build-env /app/out .
+ENTRYPOINT ["dotnet", "CustomerAPIServices.dll"]
